# RP

crates/src/: front_of_house.rs  lib.rs  main.rs
guess/: .gitignore  Cargo.toml
guess/src/: main.rs
main/: Cargo.toml
main/src/: DT.rs  enums.rs  main.rs  match.rs  ownership.rs  reference.rs  slices.rs  structs-methods.rs  structs.rs
minibackend/: .gitignore  Cargo.toml
minibackend/src/: main.rs  models.rs
minibackend/src/models/: pizza.rs
rectangles/: .gitignore
rectangles/src/: main.rs
res/: Cargo.toml
res/src/: lib.rs
