[package]
name = "miniBE"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
async-trait = "0.1.88"
derive_more = "2.0.1"
json = "0.12.4"
serde = { version = "1.0.219", features = ["derive"] }
surrealdb = "2.3.0"
uuid = "1.16.0"
validator = { version = "0.20.0", features = ["derive"] }
